force-app/main/default/objects/Lead/fields/AD__c.field-meta.xml
<CustomField>
    <fullName>AD__c</fullName>
    <formula>Owner:User.Manager.Manager.Manager.FirstName+&apos; &apos;+Owner:User.Manager.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Owner</label>
    <type>Text</type>
</CustomField>