force-app/main/default/objects/Lead/fields/AD_V1__c.field-meta.xml
<CustomField>
    <fullName>AD_V1__c</fullName>
    <formula>Owner:User.AD_V1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AD V1</label>
    <type>Text</type>
</CustomField>