force-app/main/default/objects/Lead/fields/Admission_Letter_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Letter_Expiry_Date__c</fullName>
    <label>Admission Letter Expiry Date</label>
    <type>DateTime</type>
</CustomField>