force-app/main/default/objects/Lead/fields/Admission_Letter_Send_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Admission_Letter_Send_Date_Time__c</fullName>
    <label>Admission Letter Send Date/Time</label>
    <type>DateTime</type>
</CustomField>