force-app/main/default/objects/Lead/fields/Admission_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Admission_Letter_Sent__c</fullName>
    <label>Send Admission Letter - NA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>