force-app/main/default/objects/Lead/fields/Admission_roll_out_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Admission_roll_out_Date_Time__c</fullName>
    <label>Admission roll out Date/Time</label>
    <type>DateTime</type>
</CustomField>