force-app/main/default/objects/Lead/fields/Admission_roll_out_Final__c.field-meta.xml
<CustomField>
    <fullName>Admission_roll_out_Final__c</fullName>
    <label>Admission roll out (Final)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>