force-app/main/default/objects/Lead/fields/AI__c.field-meta.xml
<CustomField>
    <fullName>AI__c</fullName>
    <formula>Owner:User.AI__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI</label>
    <type>Text</type>
</CustomField>