force-app/main/default/objects/Lead/fields/AO__c.field-meta.xml
<CustomField>
    <fullName>AO__c</fullName>
    <formula>Owner:User.AO__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AO</label>
    <type>Text</type>
</CustomField>