force-app/main/default/objects/Lead/fields/AO_Interview_Status_Manual__c.field-meta.xml
<CustomField>
    <fullName>AO_Interview_Status_Manual__c</fullName>
    <label>AO Interview Status (Manual)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learner No-Show</fullName>
            </value>
            <value>
                <fullName>AO No-Show</fullName>
            </value>
            <value>
                <fullName>Conducted</fullName>
            </value>
            <value>
                <fullName>Joined &amp; Dropped</fullName>
                <isActive>false</isActive>
                <label>Joined &amp; Dropped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>