force-app/main/default/objects/Lead/fields/Application_form_completed__c.field-meta.xml
<CustomField>
    <fullName>Application_form_completed__c</fullName>
    <label>Application form completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Todo</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Interview Slot Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>