force-app/main/default/objects/Lead/fields/Application_Form_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_Completed_Date_Time__c</fullName>
    <label>Application Form Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>