force-app/main/default/objects/Lead/fields/ASM_V1__c.field-meta.xml
<CustomField>
    <fullName>ASM_V1__c</fullName>
    <formula>Owner:User.ASM_V1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASM V1</label>
    <type>Text</type>
</CustomField>