force-app/main/default/objects/Lead/fields/Audit_Officer__c.field-meta.xml
<CustomField>
    <fullName>Audit_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>