force-app/main/default/objects/Lead/fields/Audit_Officer_Email__c.field-meta.xml
<CustomField>
    <fullName>Audit_Officer_Email__c</fullName>
    <formula>Audit_Officer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit Officer Email</label>
    <type>Text</type>
</CustomField>