force-app/main/default/objects/Lead/fields/Average_Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Talk_Time__c</fullName>
    <formula>TEXT(FLOOR((Connected_Call_Time_in_Seconds__c/Call_Count__c)/3600)) + &apos;:&apos; + TEXT( FLOOR(MOD((Connected_Call_Time_in_Seconds__c/Call_Count__c),3600)/60)) + &apos;:&apos; + TEXT(MOD(MOD((Connected_Call_Time_in_Seconds__c/Call_Count__c),3600),60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Talk Time</label>
    <type>Text</type>
</CustomField>