force-app/main/default/objects/Lead/fields/Bank_Statement__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement__c</fullName>
    <label>Bank Statement (3 months)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Salary_Slip__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>