force-app/main/default/objects/Lead/fields/BDA__c.field-meta.xml
<CustomField>
    <fullName>BDA__c</fullName>
    <formula>Owner:User.FirstName+&apos; &apos;+Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDA</label>
    <type>Text</type>
</CustomField>