force-app/main/default/objects/Lead/fields/Birth_Date_del__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_del__c</fullName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>