force-app/main/default/objects/Lead/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <label>Birth Year</label>
    <type>Date</type>
</CustomField>