force-app/main/default/objects/Lead/fields/Book_Later_Flow__c.field-meta.xml
<CustomField>
    <fullName>Book_Later_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Book Later Flow Missed</label>
    <type>Checkbox</type>
</CustomField>