force-app/main/default/objects/Lead/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>CS &amp; IT</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Biotech</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Paramedical</fullName>
            </value>
            <value>
                <fullName>Vocational Courses</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Mass Communications</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Computer Applications</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Hotel Management</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Veterinary Sciences</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>