force-app/main/default/objects/Lead/fields/Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Connected Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>