force-app/main/default/objects/Lead/fields/Called_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Called_Percentage__c</fullName>
    <formula>Called_Unique__c  /  Lead_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Called Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>