force-app/main/default/objects/Lead/fields/Called_Unique__c.field-meta.xml
<CustomField>
    <fullName>Called_Unique__c</fullName>
    <formula>if(Total_Call_Count__c &gt;0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Called Unique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>