force-app/main/default/objects/Lead/fields/Campaign_Comment__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Comment__c</fullName>
    <description>Campaign Comment</description>
    <label>Campaign Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>