force-app/main/default/objects/Lead/fields/Campaign_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Country_Code__c</fullName>
    <formula>&apos;EN-IN&apos;</formula>
    <label>Campaign Country Code</label>
    <type>Text</type>
</CustomField>