force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>if(ISPICKVAL( Course_Name__c,&apos;&apos;),&apos;&apos;,if(OR(ISPICKVAL( Course_Name__c ,&apos;Data Science Course&apos;),
ISPICKVAL( Course_Name__c ,&apos;Backend Development Course&apos;),
ISPICKVAL( Course_Name__c ,&apos;Fullstack Development Course&apos;),
ISPICKVAL( Course_Name__c ,&apos;Frontend Development Course&apos;),
ISPICKVAL( Course_Name__c ,&apos;Software Testing Course&apos;)),
&apos;Tech&apos;,&apos;Business&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>