force-app/main/default/objects/Lead/fields/Closed_By_Remarketing__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Remarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can be Marked As Closed By Remarketing</label>
    <type>Checkbox</type>
</CustomField>