force-app/main/default/objects/Lead/fields/Closed_Lost_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date_Time__c</fullName>
    <label>Closed Lost Date Time</label>
    <type>DateTime</type>
</CustomField>