force-app/main/default/objects/Lead/fields/College_City__c.field-meta.xml
<CustomField>
    <fullName>College_City__c</fullName>
    <label>College City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>College_State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Aizawl</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
                <label>ALIGARH</label>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Amravati</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Anand</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
                <label>anantapur</label>
            </value>
            <value>
                <fullName>Arrah</fullName>
            </value>
            <value>
                <fullName>Asansol</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Bahadurgarh</fullName>
            </value>
            <value>
                <fullName>Ballia</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
                <label>BANGALORE</label>
            </value>
            <value>
                <fullName>Banswara</fullName>
            </value>
            <value>
                <fullName>Barasat</fullName>
            </value>
            <value>
                <fullName>Bardhaman</fullName>
            </value>
            <value>
                <fullName>Bardoli</fullName>
            </value>
            <value>
                <fullName>Bareilly</fullName>
            </value>
            <value>
                <fullName>Bastar</fullName>
            </value>
            <value>
                <fullName>Bathinda</fullName>
            </value>
            <value>
                <fullName>Belagavi</fullName>
            </value>
            <value>
                <fullName>Belgaum</fullName>
            </value>
            <value>
                <fullName>Bellary</fullName>
            </value>
            <value>
                <fullName>Berhampur</fullName>
                <label>BERHAMPUR</label>
            </value>
            <value>
                <fullName>Bhagalpur</fullName>
            </value>
            <value>
                <fullName>Bharatpur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>