force-app/main/default/objects/Lead/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <label>Current College (V)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>