force-app/main/default/objects/Lead/fields/College_State__c.field-meta.xml
<CustomField>
    <fullName>College_State__c</fullName>
    <label>College State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANDHRA PRADESH</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>ASSAM</fullName>
            </value>
            <value>
                <fullName>BIHAR</fullName>
            </value>
            <value>
                <fullName>Chhattisgarh</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>HIMACHAL PRADESH</fullName>
            </value>
            <value>
                <fullName>Jammu and Kashmir</fullName>
            </value>
            <value>
                <fullName>JHARKHAND</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Manipur</fullName>
            </value>
            <value>
                <fullName>Mizoram</fullName>
            </value>
            <value>
                <fullName>Nagaland</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Odisha</fullName>
            </value>
            <value>
                <fullName>ORISSA</fullName>
            </value>
            <value>
                <fullName>PUNJAB</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Sikkim</fullName>
            </value>
            <value>
                <fullName>Tamil Nadu</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Tripura</fullName>
            </value>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>Uttarakhand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>