force-app/main/default/objects/Lead/fields/College_Year_Fess__c.field-meta.xml
<CustomField>
    <fullName>College_Year_Fess__c</fullName>
    <label>College Year Fees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 to 50K</fullName>
            </value>
            <value>
                <fullName>50K to 1 Lac</fullName>
            </value>
            <value>
                <fullName>1 Lac to 3 Lac</fullName>
            </value>
            <value>
                <fullName>3 Lac to 5 Lac</fullName>
            </value>
            <value>
                <fullName>5 Lac to 7 Lac</fullName>
            </value>
            <value>
                <fullName>7 Lac to 10 Lac</fullName>
            </value>
            <value>
                <fullName>10 Lac to 15 Lac</fullName>
            </value>
            <value>
                <fullName>15 Lac to 20 Lac</fullName>
            </value>
            <value>
                <fullName>20 Lac +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>