force-app/main/default/objects/Lead/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <label>Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>