force-app/main/default/objects/Lead/fields/Connected_Call_Time_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Connected_Call_Time_in_Seconds__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Connected Call Time (in Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>