force-app/main/default/objects/Lead/fields/Connected_calls_After_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Connected_calls_After_Assigned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pre-Interview Connected calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>