force-app/main/default/objects/Lead/fields/Connected_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Connected_Percentage__c</fullName>
    <formula>Connected_Unique__c  /  Called_Unique__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>