force-app/main/default/objects/Lead/fields/Connected_Unique__c.field-meta.xml
<CustomField>
    <fullName>Connected_Unique__c</fullName>
    <formula>IF( Call_Count__c &gt;0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Unique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>