force-app/main/default/objects/Lead/fields/Connects_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Connects_Last_30_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Connects Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>