force-app/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>