force-app/main/default/objects/Lead/fields/Course_Amount__c.field-meta.xml
<CustomField>
    <fullName>Course_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Course Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>