force-app/main/default/objects/Lead/fields/Course_Selected__c.field-meta.xml
<CustomField>
    <fullName>Course_Selected__c</fullName>
    <label>Course Selected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bachelor of Arts BA Hons. Hindi</fullName>
            </value>
            <value>
                <fullName>Bachelor of Arts BA Hons. History</fullName>
            </value>
            <value>
                <fullName>Bachelor of Arts BA Hons. Political Science</fullName>
            </value>
            <value>
                <fullName>Bachelor of Arts BA Hons. Psychology</fullName>
            </value>
            <value>
                <fullName>Bachelor of Arts BA Hons. Sociology</fullName>
            </value>
            <value>
                <fullName>Bachelor of Arts BA Hons. English</fullName>
            </value>
            <value>
                <fullName>Master of Education M.Ed</fullName>
            </value>
            <value>
                <fullName>M.Phil. Geography</fullName>
            </value>
            <value>
                <fullName>M.Phil. Social Work</fullName>
            </value>
            <value>
                <fullName>M.Phil. Translation Studies</fullName>
            </value>
            <value>
                <fullName>Ph.D. Arabic</fullName>
            </value>
            <value>
                <fullName>Ph.D. French</fullName>
            </value>
            <value>
                <fullName>Ph.D. Gender Studies</fullName>
            </value>
            <value>
                <fullName>Ph.D. Geography</fullName>
            </value>
            <value>
                <fullName>Ph.D. Library &amp; Information Science</fullName>
            </value>
            <value>
                <fullName>Ph.D. Public Administration</fullName>
            </value>
            <value>
                <fullName>Ph.D. Rural Development</fullName>
            </value>
            <value>
                <fullName>Ph.D. Social Work</fullName>
            </value>
            <value>
                <fullName>Ph.D. Translation Studies</fullName>
            </value>
            <value>
                <fullName>Ph.D. Visual Arts</fullName>
            </value>
            <value>
                <fullName>Diploma German Language</fullName>
            </value>
            <value>
                <fullName>Diploma in Creative Writing in English</fullName>
            </value>
            <value>
                <fullName>Diploma in HIV and Family Education</fullName>
            </value>
            <value>
                <fullName>Diploma in Tourism Studies</fullName>
            </value>
            <value>
                <fullName>Diploma in Urdu</fullName>
            </value>
            <value>
                <fullName>Post  Graduate Diploma in Higher Education</fullName>
            </value>
            <value>
                <fullName>Post Graduate Diploma in Adult Education &amp; Development</fullName>
            </value>
            <value>
                <fullName>Post Graduate Diploma in Audio Programme Production</fullName>
            </value>
            <value>
                <fullName>Post Graduate Diploma in Educational Technology</fullName>
            </value>
            <value>
                <fullName>Post Graduate Diploma In Environment And Sustainable Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>