force-app/main/default/objects/Lead/fields/Created_time__c.field-meta.xml
<CustomField>
    <fullName>Created_time__c</fullName>
    <formula>TIMEVALUE(( CreatedDate + (5.5/24)))</formula>
    <label>Created time</label>
    <type>Time</type>
</CustomField>