force-app/main/default/objects/Lead/fields/CTC_V__c.field-meta.xml
<CustomField>
    <fullName>CTC_V__c</fullName>
    <label>CTC (V)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Work_Experience__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3 L</fullName>
            </value>
            <value>
                <fullName>3-5 L</fullName>
            </value>
            <value>
                <fullName>5-8 L</fullName>
            </value>
            <value>
                <fullName>8 L+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>