force-app/main/default/objects/Lead/fields/Cumulative_of_All_Calls__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_of_All_Calls__c</fullName>
    <formula>Total_Call_Count__c + Total_Calls_Made_after_RM_assigned_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative of All Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>