force-app/main/default/objects/Lead/fields/Cumulative_of_All_Connected_Calls__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_of_All_Connected_Calls__c</fullName>
    <formula>Call_Count__c + Total_Connected_calls_Made_after_RM_ass__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative of All Connected Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>