force-app/main/default/objects/Lead/fields/Cumulative_of_Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_of_Talk_Time__c</fullName>
    <formula>Total_Talk_time_Made_after_RM_assigned__c + Connected_Call_Time_in_Seconds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative of Talk Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>