force-app/main/default/objects/Lead/fields/Current_College__c.field-meta.xml
<CustomField>
    <fullName>Current_College__c</fullName>
    <label>Current College</label>
    <length>255</length>
    <type>Text</type>
</CustomField>