force-app/main/default/objects/Lead/fields/current_designation__c.field-meta.xml
<CustomField>
    <fullName>current_designation__c</fullName>
    <label>Current Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>