force-app/main/default/objects/Lead/fields/Current_Salary__c.field-meta.xml
<CustomField>
    <fullName>Current_Salary__c</fullName>
    <label>Current Salary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 to 30K</fullName>
            </value>
            <value>
                <fullName>30k to 50K</fullName>
            </value>
            <value>
                <fullName>50K to 1 Lac</fullName>
            </value>
            <value>
                <fullName>1 Lac to 1.5 Lac</fullName>
            </value>
            <value>
                <fullName>1.5 Lac to 2 Lac</fullName>
            </value>
            <value>
                <fullName>2 Lac to 3 Lac</fullName>
            </value>
            <value>
                <fullName>3 Lac +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>