force-app/main/default/objects/Lead/fields/Date_of_Interview__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Interview__c</fullName>
    <label>Date of Interview</label>
    <type>Date</type>
</CustomField>